# pico-4yp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
device_src/: CMakeLists.txt  main.c
device_src/inc/: FreeRTOSConfig.h  board_config.h
device_src/lib/: CMakeLists.txt
device_src/lib/sensor_manager/: CMakeLists.txt  sensor_manager.c  sensor_manager.h
docs/: CMakeLists.txt  Doxyfile.in  Makefile  make.bat
docs/source/: conf.py  index.rst
etl_test/: CMakeLists.txt  etl_test.cpp
examples/: CMakeLists.txt  README.md
examples/adc_dma/: CMakeLists.txt  adc_dma.c
examples/adc_test/: CMakeLists.txt  adc_test.c
examples/blink/: picow_blink.c
examples/freertos/: CMakeLists.txt  README.md
examples/freertos/blink/: CMakeLists.txt  FreeRTOSConfig.h
examples/freertos/sw_timer/: CMakeLists.txt  FreeRTOSConfig.h
examples/freertos/task_notif/: CMakeLists.txt  FreeRTOSConfig.h  task_notif.cpp
examples/freertos/usb_device_cdc_dual_ports_no_lwip/: CMakeLists.txt  FreeRTOSConfig.h  usb_descriptors.c  usb_device_cdc_dual_ports_no_lwip.c
examples/freertos/usb_device_hid_composite_no_lwip/: FreeRTOSConfig.h  tusb_config.h
examples/freertos/usb_device_stream_based_egress_interface/: CMakeLists.txt  README.md  tusb_config.h  usb_device_stream_based_egress_interface.c
examples/freertos/usb_device_stream_based_egress_interface/proto/: periodic_sampler_stream_egress.proto
examples/freertos/usb_device_stream_based_egress_interface/python_host_scripts/: nanopb_pb2.py  periodic_sampler_command_script.py
examples/freertos/usb_device_stream_based_egress_interface/python_host_scripts/commands/: commands.py
examples/freertos/usb_device_stream_based_egress_interface/python_host_scripts/frontend/: cli.py
examples/freertos/usb_device_stream_based_egress_interface/python_host_scripts/message_handler/: message_handler.py
examples/freertos/usb_device_tinyusb_multi_core_egress_interface_no_lwip/proto/: egress_multi_core.proto
examples/freertos/usb_device_tinyusb_multi_core_egress_interface_no_lwip/python_host_scripts/: egress_multi_core_pb2.py
examples/freertos/usb_nanopb_command_interface_no_lwip/: FreeRTOSConfig.h  README.md  usb_descriptors.c
examples/freertos/usb_nanopb_command_interface_no_lwip/proto/: unionproto.proto
examples/freertos/usb_nanopb_command_interface_no_lwip/python_host_scripts/: union_msg_encode.py  unionproto_pb2.py
examples/hello_world_usb/: picow_hello_world_usb.cpp
freertos/: CMakeLists.txt
freertos/blink/: CMakeLists.txt  blink.cpp
freertos/sw_timer/: CMakeLists.txt  FreeRTOSConfig.h  sw_timer.cpp
freertos/task_notif/: CMakeLists.txt  FreeRTOSConfig.h
freertos/usb_device_cdc_dual_ports_no_lwip/: CMakeLists.txt  tusb_config.h
freertos/usb_device_hid_composite_no_lwip/: CMakeLists.txt  usb_device_hid_composite_no_lwip.c
freertos/usb_device_stream_based_egress_interface/: README.md  usb_device_stream_based_egress_interface.c
freertos/usb_device_stream_based_egress_interface/python_host_scripts/: periodic_sampler_stream_egress_pb2.py
freertos/usb_device_stream_based_egress_interface/python_host_scripts/communications/: protocol.py
freertos/usb_device_tinyusb_multi_core_egress_interface_no_lwip/: CMakeLists.txt  README.md  usb_device_tinyusb_multi_core_egress_interface_no_lwip.c
freertos/usb_device_tinyusb_multi_core_egress_interface_no_lwip/python_host_scripts/: tinyusb_multi_core_egress_interface.py
freertos/usb_nanopb_command_interface_no_lwip/: CMakeLists.txt  README.md  usb_nanopb_command_interface_no_lwip.c
freertos/usb_nanopb_command_interface_no_lwip/python_host_scripts/: union_msg_encode.py
hello_world_usb/: CMakeLists.txt  picow_hello_world_usb.cpp
host_src/python_host_scripts/: main.py  main_pb2.py
host_src/python_host_scripts/commands/: commands.py
host_src/python_host_scripts/communications/: protocol.py
host_src/python_host_scripts/message_handler/: message_handler.py
middleware/: CMakeLists.txt
middleware/segger/RTT/: CMakeLists.txt
middleware/segger/RTT/Config/: SEGGER_RTT_Conf.h
proto/: main.proto
sensor_drivers/: CMakeLists.txt  README.md
sensor_drivers/ad7606b/: CMakeLists.txt  ad7606b.c  ad7606b.h
sensor_drivers/inc/: sensor_drivers.h
